--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </a>
   </div>
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
+    <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
@@ -21,8 +20,7 @@
     <h3>Todo</h3>
     <ul id="incompleteTasks">
       <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
+        <input type="checkbox"><label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
@@ -30,8 +28,7 @@
         </button>
       </li>
       <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
+        <input type="checkbox"><label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete">
@@ -42,8 +39,7 @@
     <h3>Completed</h3>
     <ul id="completed-tasks">
       <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
+        <input type="checkbox" checked><label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
