--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="logo">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
   </div>
   <div class="centered-main-page-element">
