--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
   </div>
-  <div class="centered-main-page-element">
+  <div class="center-elem">
     <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="task-wrapp">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
