--- a/index.html
+++ b/index.html
@@ -5,45 +5,45 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
 </head>
-<body>
+<body class="body">
   <div class="logo">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="img" src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
   </div>
   <div class="center-elem">
-    <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
+    <p id="topSectionForAddingElementToList"><label class="label" for="new-task">Add Item</label>
       <div class="task-wrapp">
         <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <button class="button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
+    <h3 class="title">Todo</h3>
+    <ul class="list" id="incompleteTasks">
+      <li class="list-item">
         <input type="checkbox"><label class="task">Pay Bills</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="edit button">Edit</button>
+        <button class="delete button">
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="edit-mode">
+      <li class="list-item" class="edit-mode">
         <input type="checkbox"><label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <button class="edit button">Save</button>
+        <button class="delete button">
           <img src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
+    <h3 class="title">Completed</h3>
+    <ul class="list" id="completed-tasks">
+      <li class="list-item">
         <input type="checkbox" checked><label class="task">See the Doctor</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="edit button">Edit</button>
+        <button class="delete button">
           <img src="./remove.svg">
         </button>
       </li>
