--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
 </head>
 <body class="body">
-  <div class="logo">
+  <header class="logo">
     <img class="img" src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
-  </div>
-  <div class="center-elem">
-    <p id="topSectionForAddingElementToList"><label class="label" for="new-task">Add Item</label>
+  </header>
+  <main class="center-elem">
+    <section id="topSectionForAddingElementToList"><label class="label" for="new-task">Add Item</label>
       <div class="task-wrapp">
         <input id="new-task"class="task" type="text">
         <button class="button">Add</button>
       </div>
-    </p>
+    </section>
     <h3 class="title">Todo</h3>
     <ul class="list" id="incompleteTasks">
       <li class="list-item">
@@ -48,7 +48,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
