--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="body">
   <header class="logo">
-    <img class="img" src="./eisenhower-matrix.jpg">
+    <img class="img" src="./eisenhower-matrix.jpg" alt="matrix-eisenhower">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
   </header>
@@ -25,7 +25,7 @@
         <input type="text" class="task">
         <button class="edit button">Edit</button>
         <button class="delete button">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="img-remove">
         </button>
       </li>
       <li class="list-item" class="edit-mode">
@@ -33,7 +33,7 @@
         <input type="text" value="Go Shopping" class="task">
         <button class="edit button">Save</button>
         <button class="delete button">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="img-remove">
         </button>
       </li>
     </ul>
@@ -44,7 +44,7 @@
         <input type="text" class="task">
         <button class="edit button">Edit</button>
         <button class="delete button">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="img-remove">
         </button>
       </li>
     </ul>
